Closed Bug 1726802 Opened 5 years ago Closed 5 years ago

[macOS] Date picker panel month selector broken (doesn't paint)

Categories

(Core :: Web Painting, defect)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 + verified
firefox93 + verified

People

(Reporter: Gijs, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:
We're breaking web input form standard UI.

STR:

  1. open https://sl.se/
  2. click "block" on geolocation request
  3. click in the "Från" input box; this makes the "När vill du åka?" selector appear
  4. click the "Avgångstid" radio item
  5. click in the date input field that appears on the right
  6. click the month selector in the date picker panel (this is a panel that lives in the parent process)

ER:
it shows you the month/year selector immediately

AR:
one of a few things. Sometimes nothing new paints at all. Sometimes a grey box and the arrows paint, but the months/years don't paint or animate in; reopening the panel after this tends to reshow the month/year selector but make it impossible to go back to the actual date picker.

Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a72c2fe447612a537f9a5228618453ffa6e55ca3&tochange=f5921ffeaee4b8b096f9999d4171fee1c3e1c57a

Based on symptoms I'm guessing this is 1722258; I'll continue bisecting on autoland to make sure but wanted to get this filed straight away.

I originally noticed this on beta, and it's still there on b6, so this isn't a dupe of bug 1724848...

(In reply to :Gijs (he/him) from comment #0)

Based on symptoms I'm guessing this is 1722258; I'll continue bisecting on autoland to make sure but wanted to get this filed straight away.

Confirmed this is the right regressor.

I originally noticed this on beta, and it's still there on b6, so this isn't a dupe of bug 1724848...

Realized belatedly maybe this was confusing, so to be clear: this also still reproduces on today's nightly.

This appears to WFM on Nightly w/ Win10.

Yeah, I think it's mac-specific for some reason...

Summary: Date picker panel month selector broken (doesn't paint) → [macOS] Date picker panel month selector broken (doesn't paint)
Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

Please nominate this for Beta approval when you get a chance.

Comment on attachment 9237578 [details]
Bug 1726802 - Trigger pending animations after a paint with the fallback renderer. r?hiro

Beta/Release Uplift Approval Request

  • User impact if declined: Broken animations within popup panels on MacOS
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Super simple changes that triggers animations, and in exactly the same way as the other rendering backends.
  • String changes made/needed:
Flags: needinfo?(matt.woodrow)
Attachment #9237578 - Flags: approval-mozilla-beta?

Comment on attachment 9237578 [details]
Bug 1726802 - Trigger pending animations after a paint with the fallback renderer. r?hiro

Approved for 92.0b9.

Attachment #9237578 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the initial issue described in comment 0 using old Nightly build from 2021-08-20, verified that using latest Nightly 93.0a1 and Beta 92.0b9 the month selector is correctly painted on macOS 11.5.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
See Also: → 1730075
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: