Bug 1726802 - Trigger pending animations after a paint with the fallback renderer. r=hiro, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D123390