layout/painting/WindowRenderer.cpp
@@ -184,6 +184,7 @@ bool FallbackRenderer::BeginTransaction(const nsCString& aURL) {
 void FallbackRenderer::EndTransactionWithColor(const nsIntRect& aRect,
                                                const gfx::DeviceColor& aColor) {
   mTarget->GetDrawTarget()->FillRect(Rect(aRect), ColorPattern(aColor));
+  mAnimationReadyTime = TimeStamp::Now();
 }
 
 void FallbackRenderer::EndTransactionWithList(nsDisplayListBuilder* aBuilder,
@@ -214,6 +215,7 @@ void FallbackRenderer::EndTransactionWithList(nsDisplayListBuilder* aBuilder,
   dt->DrawSurface(snapshot, Rect(dest->GetRect()), Rect(dest->GetRect()),
                   DrawSurfaceOptions(),
                   DrawOptions(1.0f, CompositionOp::OP_SOURCE));
+  mAnimationReadyTime = TimeStamp::Now();
 }
 
 }  // namespace mozilla
